--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,20 +34,23 @@ jobs:
           poetry config virtualenvs.create false
           poetry install
 
-      - name: Build documentation using Makefile
+      - name: Debug current directory and Build documentation using Makefile
         run: |
           echo "Building documentation from: $(pwd)"
+          ls -l  # Debug: List current directory contents
           cd docs
           poetry run make html
-        working-directory: ${{ github.workspace }}/docs
+        working-directory: ${{ github.workspace }}
 
       - name: List built documentation
         run: |
           find ./docs/build/ -type f
+        working-directory: ${{ github.workspace }}/docs
 
       - name: Create .nojekyll file
         run: |
           touch ./docs/build/.nojekyll
+        working-directory: ${{ github.workspace }}/docs
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
@@ -63,3 +66,4 @@ jobs:
           pwd  # Print the current working directory
           ls -l ./docs/build/  # List files in the build directory
           cat ./docs/source/conf.py  # Show Sphinx config file for debugging
+        working-directory: ${{ github.workspace }}
