update the toml file for version control

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 
 [tool.poetry]
-name = "lightrag-project"
-version = "0.1.0"
+name = "lightrag"
+version = "0.0.0-alpha.2"
+readme = "README.md"
 description = "A project to develop and test the lightrag library"
 authors = ["Your Name <your.email@example.com>"]
 license = "MIT"
@@ -11,8 +12,8 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.11, <4.0"
-lightrag = { path = "./lightrag", develop = true }
+python = ">=3.10, <4.0"
+# lightrag = { path = "./lightrag", develop = true }
 torch = "^2.3.1"
 flagembedding = "^1.2.10"
 # cohere = "^5.5.7"
