update the api reference names

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -34,6 +34,8 @@ apidoc:
 	@python $(SOURCEDIR)/remove_string.py
 	@echo "Removing duplicated files"
 	@python $(SOURCEDIR)/remove_files.py
+	@echo "Renaming and updating file"
+	@python $(SOURCEDIR)/change_api_file_name.py
 
 
 
