update the api reference names

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -36,8 +36,9 @@ apidoc:
 	@python $(SOURCEDIR)/remove_files.py
 	@echo "Renaming and updating file"
 	@python $(SOURCEDIR)/change_api_file_name.py
-
-
+	# @echo "Renaming and updating file"
+	# @python $(SOURCEDIR)/change_api_file_name_autosummary.py
+	
 
 html: apidoc
 	@$(SPHINXBUILD) -b html "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
