test the doc deployment

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,6 +33,14 @@ jobs:
         run: |
           poetry config virtualenvs.create false  # Avoid creating a virtual environment
           poetry install  # Install dependencies as specified in pyproject.toml
+          
+      - name: Check Current 'document.yaml' Configuration
+        run: |
+          echo "Checking in default docs directory:"
+          cat docs/document.yaml || echo "No document.yaml in default docs directory."
+          echo "Checking in alternative directory:"
+          cat path/to/alternative/document.yaml || echo "No document.yaml in alternative directory."
+        working-directory: ${{ github.workspace }}
 
       - name: Build documentation using Makefile
         run: |
@@ -59,6 +67,7 @@ jobs:
           publish_dir: ./docs/build/  # Directory containing the built documentation
           user_name: github-actions[bot]  # Username for the commit
           user_email: github-actions[bot]@users.noreply.github.com  # Email for the commit
+          force_orphan: true  # Force the use of an orphan branch, removing all previous history
 
 # Uncomment below for debugging purposes
 #      - name: Debug Output
