test new workflow that will try to get the domain name right

--- a/.github/workflows/documentation_li.yml
+++ b/.github/workflows/documentation_li.yml
@@ -51,6 +51,10 @@ jobs:
           touch .nojekyll
         working-directory: ${{ github.workspace }}/docs/build
 
+      - name: Copy CNAME file
+        run: |
+          cp ${{ github.workspace }}/CNAME ${{ github.workspace }}/docs/build/CNAME
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
