--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,14 @@ packages = [{ from = "_lightrag", include = "lightrag" }]          # empty packa
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
-lightrag = { path = "lightrag", develop = true }
+# lightrag = { path = "lightrag", develop = true }
 torch = "^2.3.1"
 flagembedding = "^1.2.10"
 # cohere = "^5.5.7"
 openai = "^1.34.0"
 networkx = "^3.3"
 pyvis = "^0.3.2"
+lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -62,6 +63,7 @@ nbsphinx = "^0.9.4"
 nbconvert = "^7.16.4"
 pandoc = "^2.3"
 readthedocs-sphinx-search = "^0.3.2"
+sqlalchemy = "^2.0.31"
 
 
 [build-system]
