--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{ from = "_lightrag", include = "lightrag" }]          # empty packa
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
-lightrag = { path = "lightrag", develop = true }
+# lightrag = { path = "lightrag", develop = true }
 torch = "^2.3.1"
 flagembedding = "^1.2.10"
 openai = "^1.34.0"
