--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ openai = "^1.34.0"
 networkx = "^3.3"
 pyvis = "^0.3.2"
 # lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
+lightrag = "^0.0.0a13"
 
 
 [tool.poetry.group.dev.dependencies]
