--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -26,7 +26,7 @@ jobs:
           fi
         shell: bash
 
-  build-and-test:
+  build-and-package:
     needs: validate-tag
     runs-on: ubuntu-latest
     steps:
@@ -40,12 +40,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install poetry
           poetry install
-      - name: Run tests
-        run: |
-          poetry run pytest
+
+      # Comment out the pytest step
+      # - name: Run tests
+      #   run: |
+      #     poetry run pytest
+
+      - name: Build the distribution
+        run: poetry build
 
   publish-to-pypi:
-    needs: build-and-test
+    needs: build-and-package
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
