--- a/.github/workflows/test_publish_release.yml
+++ b/.github/workflows/test_publish_release.yml
@@ -29,20 +29,37 @@ jobs:
   build-and-package:
     needs: validate-tag
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.11', '3.12']  # Using the same Python versions as in your test workflow
+
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Poetry
         run: |
           python -m pip install --upgrade pip
           pip install poetry
+
+      - name: Install dependencies
+        run: |
+          cd lightrag
+          poetry config virtualenvs.create false
           poetry install
 
+      # - name: Run tests with pytest
+      #   run: |
+      #     cd lightrag
+      #     poetry run pytest
+
       - name: Build the distribution
-        run: poetry build
+        run: |
+          cd lightrag
+          poetry build
 
   dry-run-publish:
     needs: build-and-package
@@ -53,6 +70,12 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - name: Install Poetry
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
       - name: Dry run publish to PyPI
-        run: poetry publish --dry-run
+        run: |
+          cd lightrag
+          poetry publish --dry-run
         # This step simulates the publishing process without making actual changes
