--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -5,7 +5,16 @@ on:
     tags:
       - 'v*'
     branches:
-      - main  # Restricts the workflow to only run on tags pushed to the main branch
+      - release  # Restricts the workflow to only run on tags pushed to the release branch
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Override the version number'
+        required: false
+      rollback:
+        description: 'Trigger a rollback to the previous stable version'
+        required: false
+        default: false
 
 jobs:
   validate-tag:
@@ -39,17 +48,16 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install
-
-      # Comment out the pytest step
-      # - name: Run tests
-      #   run: |
-      #     poetry run pytest
-
+          poetry install --no-dev
       - name: Build the distribution
         run: poetry build
+      - name: Upload distribution for publishing
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist/**
 
-  publish-to-pypi:
+  dry-run-publish:
     needs: build-and-package
     runs-on: ubuntu-latest
     steps:
@@ -58,18 +66,57 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Install dependencies
+      - name: Download distribution
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+      - name: Dry run publish to PyPI
         run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-      - name: Build the distribution
-        run: poetry build
-      - name: Publish
+          poetry publish --dry-run --build
+
+  # Uncomment the following lines to enable TestPyPI publishing
+  # test-publish-to-testpypi:
+  #   needs: build-and-package
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: '3.11'
+  #     - name: Download distribution
+  #       uses: actions/download-artifact@v2
+  #       with:
+  #         name: dist
+  #         path: dist
+  #     - name: Publish to TestPyPI
+  #       run: |
+  #         poetry config repositories.testpypi https://test.pypi.org/legacy/
+  #         poetry publish --repository testpypi --username __token__ --password ${{ secrets.TEST_PYPI_API_TOKEN }}
+
+  publish-to-pypi:
+    needs: 
+      - validate-tag
+      - build-and-package
+      - dry-run-publish
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download distribution
+        uses: actions/download-artifact@v2
+        with:
+          name: dist
+          path: dist
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
           user: __token__
           password: ${{ secrets.PYPI_KEY }}
-          build: true  # Ensure the distribution is built before publishing
 
   create-github-release:
     needs: publish-to-pypi
@@ -87,3 +134,18 @@ jobs:
           body: 'Automated release of version ${{ github.ref_name }}'
           draft: false
           prerelease: false
+          
+  rollback:
+    needs: publish-to-pypi
+    if: ${{ github.event.inputs.rollback == 'true' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Rollback to previous stable version
+        run: |
+          echo "Rolling back to previous stable version..."
+          # Add rollback logic here
