--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -23,15 +23,20 @@ jobs:
       - uses: actions/checkout@v3
       - name: Validate Tag Format
         run: |
-          TAG_REGEX='^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9\-\.]+)?$'
-          echo "Regex to match: $TAG_REGEX"
-          TAG="${GITHUB_REF/refs\/tags\//}"
-          echo "Tag extracted: $TAG"
-          if [[ "$TAG" =~ $TAG_REGEX ]]; then
-            echo "Tag format is valid."
+          if [[ "$GITHUB_REF" == refs/tags/* ]]; then
+            TAG_REGEX='^v[0-9]+\.[0-9]+\.[0-9]+(-[a-zA-Z0-9\-\.]+)?$'
+            echo "Regex to match: $TAG_REGEX"
+            TAG="${GITHUB_REF/refs\/tags\//}"
+            echo "Tag extracted: $TAG"
+            if [[ "$TAG" =~ $TAG_REGEX ]]; then
+              echo "Tag format is valid."
+            else
+              echo "::error::Tag $TAG does not match the 'vMAJOR.MINOR.PATCH' or 'vMAJOR.MINOR.PATCH-pre-release' format."
+              exit 1
+            fi
           else
-            echo "::error::Tag $TAG does not match the 'vMAJOR.MINOR.PATCH' or 'vMAJOR.MINOR.PATCH-pre-release' format."
-            exit 1
+            echo "No tag associated with push, skipping tag validation."
+            exit 78  # Exiting with neutral status
           fi
         shell: bash
 
@@ -134,7 +139,7 @@ jobs:
           body: 'Automated release of version ${{ github.ref_name }}'
           draft: false
           prerelease: false
-          
+
   rollback:
     needs: publish-to-pypi
     if: ${{ github.event.inputs.rollback == 'true' }}
