--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "lightrag"
 
-version = "0.0.0releasetest0"
+version = "0.0.0-rc.1"
 description = "The 'PyTorch' library for LLM applications. RAG=Retriever-Agent-Generator."
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
