--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -49,13 +49,16 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Install dependencies
+      - name: Install Poetry
         run: |
           python -m pip install --upgrade pip
           pip install poetry
+      - name: Install dependencies
+        run: |
           poetry install --no-dev
       - name: Build the distribution
-        run: poetry build
+        run: |
+          poetry build
       - name: Upload distribution for publishing
         uses: actions/upload-artifact@v2
         with:
