--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Install dependencies
         run: |
           poetry install --no-dev
@@ -74,6 +75,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - name: Install Poetry
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
       - name: Download distribution
         uses: actions/download-artifact@v2
         with:
