--- a/lightrag/pyproject.toml
+++ b/lightrag/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "lightrag"
 
-version = "0.0.0-alpha.16"
-description = "The 'PyTorch' library for LLM applications."
+version = "0.0.0-beta.1"
+description = "The Lightning Library for LLM Applications."
 authors = ["Li Yin <li@sylphai.com>"]
 readme = "README.md"
 repository = "https://github.com/SylphAI-Inc/LightRAG"
@@ -32,7 +32,7 @@ packages = [{ include = "lightrag", from = "." }]
 
 
 [tool.poetry.dependencies]
-python = ">=3.10, <4.0"
+python = ">=3.9, <4.0"
 
 python-dotenv = "^1.0.1"
 backoff = "^2.2.1"
