--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ packages = [{ from = "_lightrag", include = "lightrag" }]          # empty packa
 
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
-# lightrag = { path = "lightrag", develop = true }
+lightrag = { path = "lightrag", develop = true }
 torch = "^2.3.1"
 openai = "^1.34.0"
 # lightrag = {path = "lightrag/dist/lightrag-0.0.0a11-py3-none-any.whl"}
-lightrag = "^0.0.0a13"
+# lightrag = "^0.0.0a13"
 
 
 [tool.poetry.group.dev.dependencies]
